syntax = "proto3";

package google.security.safebrowsing.v5;

import "google/protobuf/duration.proto";

// Types of threats.
enum ThreatType {
  THREAT_TYPE_UNSPECIFIED = 0;
  MALWARE = 1;
  SOCIAL_ENGINEERING = 2;
  UNWANTED_SOFTWARE = 3;
  POTENTIALLY_HARMFUL_APPLICATION = 4;
}

// Attributes of threats.
enum ThreatAttribute {
  THREAT_ATTRIBUTE_UNSPECIFIED = 0;
  CANARY = 1;
  FRAME_ONLY = 2;
}

// The response returned after searching threat hashes.
message SearchHashesResponse {
  repeated FullHash full_hashes = 1;
  google.protobuf.Duration cache_duration = 2;
}

// The full hash identified with one or more matches.
message FullHash {
  message FullHashDetail {
    ThreatType threat_type = 1;
    repeated ThreatAttribute attributes = 2;
  }

  bytes full_hash = 1;
  repeated FullHashDetail full_hash_details = 2;
}